2001-12-18  Arturo Espinosa Aldama  <arturo@ximian.com>

	* platform.pl.in (check_debian): Correctly detect woody, which
	is now officialy 3.0.

2001-12-17  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network-conf.in: Added rh72 back to supported list.

	* replace.pl.in (xst_replace_join_hash): Delete entries missing
	in the hash found in the old file. Fixes #16329

	* network.pl.in (xst_network_debian_woody_get_auto): Hmm... this
	should return 1/0. Fixes #12983

2001-12-16  Chema Celorio  <chema@celorio.com>

	* network-conf.in: remove rh 7.2 from supported list

	* configure.in (dnl): bump version to 0.11.0

2001-12-14  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_interfaces_set): simplified expression.
	(xst_network_rh72_interface_delete): redhat-7.2's own version of this.

	* network-conf.in (xml_parse): oops.

	* parse.pl.in (xst_parse_expand): Copy the array before expanding
	into it.

	* network.pl.in (xst_network_sysconfig_dir_ifaces_get_existing): More
	flexible ifcfg-* file matching.

	* users-conf.in: Added redhat-7.2 to logindefs_dist_map.

	* runlevel-conf.in: Added redhat-7.2 as a supported platform.

	* network.pl.in (xst_network_xml_parse_interface): modernized.
	Also, pass the whole hash to network_get_file.
	(xst_network_get_broadcast_ping_cmd): redhat-7.2 was missing.
	(xst_network_rh72_get_file): Red Hat 7.2 version.

	* network-conf.in (xml_parse): modernized parse routines.
	(xml_parse_network): same.
	(xml_parse_statichost): same.
	(xml_parse_dialing): same.

2001-12-11  Israel Escalante <israel@ximian.com>

	* Release 0.10.0.

2001-12-13  Israel Escalante  <israel@ximian.com>

	* ishare.pl.in: Added R.H. 7.2 to the list of supported plataforms.

	* internetsharing-conf.in: Added R.H. 7.2 to the list
	  of supported platforms.

2001-12-13  Arturo Espinosa Aldama  <arturo@ximian.com>

	* boot-grub.pl.in (xst_boot_grub_replace_label): fix: wrong regexp.

	* util.pl.in (xst_item_is_in_list): style fix.
